tests/error/01.program
{
    string_s = "0123456789";
    print(string_s[5 - 6 : 1]);
}